// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableListItem is rendered 1`] = `
<li
  aria-label="aria-label"
  aria-selected="false"
  class="euiSelectableListItem testClass1 testClass2"
  data-test-subj="test subject string"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props append 1`] = `
<li
  aria-selected="false"
  class="euiSelectableListItem"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text"
    />
    <span
      class="euiSelectableListItem__append"
    >
      <span />
       
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked is off 1`] = `
<li
  aria-selected="true"
  class="euiSelectableListItem"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      color="text"
      data-euiicon-type="cross"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked is on 1`] = `
<li
  aria-selected="true"
  class="euiSelectableListItem"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      color="text"
      data-euiicon-type="check"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props disabled 1`] = `
<li
  aria-disabled="true"
  aria-selected="false"
  class="euiSelectableListItem"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props isFocused 1`] = `
<li
  aria-selected="false"
  class="euiSelectableListItem euiSelectableListItem-isFocused"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text"
    />
    <span
      class="euiSelectableListItem__append"
    >
       
      <span
        aria-hidden="true"
        class="euiBadge euiBadge--hollow euiBadge--iconLeft euiSelectableListItem__onFocusBadge"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__icon"
            color="inherit"
            data-euiicon-type="returnKey"
          />
        </span>
      </span>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props onFocusBadge can be custom 1`] = `
<li
  aria-selected="false"
  class="euiSelectableListItem"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props onFocusBadge can be true 1`] = `
<li
  aria-selected="false"
  class="euiSelectableListItem"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props prepend 1`] = `
<li
  aria-selected="false"
  class="euiSelectableListItem"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__prepend"
    >
      <span />
    </span>
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props showIcons can be turned off 1`] = `
<li
  aria-selected="false"
  class="euiSelectableListItem"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</li>
`;
